Fix login CSS on mobile

--- a/src/login/Login.css
+++ b/src/login/Login.css
@@ -41,8 +41,10 @@ header#login-header > img.text {
   display: flex;
   flex-direction: column;
   text-align: center;
-  margin-left: 30%;
-  margin-right: 30%;
+  width: 80%;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
   background-color: white;
   border-radius: 1em;
   padding-bottom: 1em;
